# auxiliary

./: README.md  bun.lockb  package.json  pyproject.toml  tsconfig.json
installer/: __init__.py
installer/client/cli/: __init__.py  auxiliary.py  utils.py  voice.py
src/: index.ts
src/core/: auxiliary.ts  chat.ts  index.ts  system.ts  utils.ts
src/tools/: clipboard.ts  index.ts  screenshot.ts  scripts.ts  websearch.ts
